examples/test/testpolicy16973.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16973
  namespace: namespace390
spec:
  podSelector:
    matchLabels:
      key20: value0
      key12: value22
      key17: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value34
          key39: value38
          key44: value17
